fixed color palette spacing

--- a/css/style.css
+++ b/css/style.css
@@ -370,6 +370,7 @@ h1, h2, h3, h4 {
     letter-spacing: .3px;
     line-height: 2;
     margin-bottom: 4rem;
+    padding-right: 16rem;
 }
 
 /* Materials Section */
@@ -451,7 +452,7 @@ h1, h2, h3, h4 {
     letter-spacing: .3px;
     line-height: 1.85;
     text-align: center;
-    padding: 0 30rem;
+    padding: 0 26rem;
 }
 
 /* Sketch Section */
